<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TesteRecursosNativos</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="btn_camera">Câmera</string>
    <string name="btn_acelerometro">Acelerômetro</string>
    <string name="btn_gps">GPS</string>
    <string name="btn_noticacoes">Notificações</string>
    <string name="btn_maps">Google Maps</string>
    <string name="btn_force_meter">Medidor de Força G</string>
    <string name="title_activity_camera">Câmera</string>
    <string name="title_activity_acelerometro">Acelerômetro</string>
    <string name="title_activity_gps">GPS</string>
    <string name="title_activity_notificacoes">Notificações</string>
    <string name="btn_nova_notificacao">Nova Notificação</string>
    <string name="txt_acelerometro">Acelerômetro</string>
    <string name="txt_gyro">Gyroscope</string>
    <string name="btn_fotopequena">Tirar Foto Pequena</string>
    <string name="btn_tirar_foto">Tirar foto</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_call">Chamadas Nativas</string>
    <string name="btn_telefone">Telefonar</string>
    <string name="btn_sms">SMS</string>
    <string name="btn_chamadas">Chamadas</string>
    <string name="btn_email">Enviar E-mail</string>




</resources>
