<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnGps"
        android:layout_alignParentTop="true"
        android:text="@string/btn_camera" />

    <Button
        android:id="@+id/btnAcelerometro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnCamera"
        android:layout_below="@+id/btnCamera"
        android:text="@string/btn_acelerometro" />

    <Button
        android:id="@+id/btnGps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnAcelerometro"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_gps" />

    <Button
        android:id="@+id/btnNotificacoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnGps"
        android:layout_below="@+id/btnGps"
        android:text="@string/btn_noticacoes" />

    <Button
        android:id="@+id/btnGForceMeter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnNotificacoes"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_force_meter" />

    <Button
        android:id="@+id/btnChamadas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnGForceMeter"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_chamadas" />

</RelativeLayout>